HUGE PROGRESS: all ships are placed automatically (including the player's), game is playable but not winnable

--- a/battleship/style.css
+++ b/battleship/style.css
@@ -13,6 +13,11 @@ html, body {
     border-collapse: collapse;
     background-color: #bbb;
     cursor: default;
+    color: white;
+}
+
+.border-cell {
+    color: black;
 }
 
 h4 {
@@ -44,4 +49,8 @@ h4 {
 
 .missCell {
     background-color: white;
+}
+
+.shipCell {
+    background-color: black;
 }
