--- a/css/home-main.css
+++ b/css/home-main.css
@@ -42,6 +42,12 @@ h6 {
     width: 100%;
     min-height: 700px !important;
     height: 100%;
+    animation: fadein 1s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
 
 #top {
@@ -87,13 +93,14 @@ h6 {
     vertical-align: top;
     color: black;
     border: 1px solid #fafafa;
-    border-radius: 2px;
+    border-radius: 10px;
+    transition-duration: 0.2s;
 }
 
 .card:hover {
-    color: red;
-    border: 1px solid red;
     background-color: white;
+    box-shadow: 0px 0px 12px -4px #444444;
+    transform: scale(1.1);
 }
 
 .card p {
