--- a/css/home-main.css
+++ b/css/home-main.css
@@ -116,12 +116,16 @@ h6 {
     margin-left: .4em;
     margin-right: .4em;
     font-size: 16pt;
+    transition-duration: 0.2s;
+}
+
+.link:hover {
+    transform: scale(1.3);
 }
 
 .link>a:hover, .link>a:visited:hover {
     color: white;
     cursor: pointer;
-    border-bottom: 3px solid white;
 }
 
 .link>a, .link>a:visited {
