--- a/css/home-main.css
+++ b/css/home-main.css
@@ -62,13 +62,13 @@ h6 {
 }
 
 .titles {
-    padding: 8em 0em 0em 5em;
+    padding: 10% 10% 0% 10%;
 }
 
 #bio-summary {
     text-align: left;
     color: white;
-    padding: 6em 0em 0em 2em;
+    padding: 10%;
 }
 
 #middle {
