remove random color, add SICK gradient

--- a/css/home-main.css
+++ b/css/home-main.css
@@ -15,7 +15,8 @@ CSS stylesheet for index.html
 html, body {
     height: 100%;
     width: 100%;
-    background-color: #fafafa;
+    background: rgb(27,0,0);
+    background: linear-gradient(165deg, rgba(27,0,0,1) 0%, rgba(0,76,143,1) 100%, rgba(0,204,255,1) 100%);
 }
 
 h1 {
