--- a/css/home-main.css
+++ b/css/home-main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 /*
 CSS stylesheet for index.html
@@ -8,7 +8,7 @@ CSS stylesheet for index.html
 * {
     margin: 0px;
     padding: 0px;
-    font-family: 'Source Code Pro', monospace;
+    font-family: 'Roboto Mono', monospace;
     cursor: default;
 }
 
