--- a/css/home-main.css
+++ b/css/home-main.css
@@ -1,7 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: 'Cascadia Mono', 'SF Mono', Menlo, Consolas, 'Courier New', monospace;
+    font-family: 'SF Mono', 'Cascadia Mono', Menlo, Consolas, 'Courier New', monospace;
     cursor: default;
 }
 
