--- a/css/home-main.css
+++ b/css/home-main.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
-    font-family: 'Cascadia Mono', 'SF Mono', Consolas, Menlo, 'Courier New', monospace;
+    font-family: 'JetBrains Mono', monospace;
     cursor: default;
 }
 
