--- a/css/home-main.css
+++ b/css/home-main.css
@@ -4,13 +4,21 @@
     margin: 0px;
     padding: 0px;
     font-family: 'JetBrains Mono', monospace;
-    cursor: default;
+    color: white;
 }
 
-html, body {
-    height: 100%;
+html {
     width: 100%;
+    height: 100%;
     background: linear-gradient(160deg, rgba(60,0,85,1) 0%, rgba(0,0,159,1) 50%, rgba(0,255,230,1) 120%);
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
+    grid-template-rows: 5% 47.5% 47.5%;
 }
 
 h1 {
@@ -25,80 +33,14 @@ h6 {
     font-size: 32pt;
 }
 
-.card, .card>* {
-    cursor: pointer;
+.top {
+    grid-column-start: 2;
+    grid-row-start: 2;
 }
 
-.small {
-    font-size: 24pt;
-}
-
-.main {
-    width: 100%;
-    min-height: 700px !important;
-    height: 100%;
-    animation: fadein 1s;
-}
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
-#top {
-    height: 100%;
-}
-
-.heading {
-    border: 0;
-    padding: 0;
-    color: white;
-    font-weight: bold;
-}
-
-.titles {
-    padding: 5% 10% 0% 10%;
-}
-
-#bio-summary {
-    text-align: left;
-    color: white;
-    padding: 10%;
-}
-
-#middle {
-    text-align: center;
-}
-
-#middle-heading {
-    padding-top: 1em;
-}
-
-#card-deck {
-    height: 30%;
-    margin-top: 4em;
-
-}
-
-.card {
-    display: inline-block;
-    width: 30%;
-    height: 100%;
-    vertical-align: top;
-    color: black;
-    border: 1px solid #fafafa;
-    border-radius: 10px;
-    transition-duration: 0.2s;
-}
-
-.card:hover {
-    background-color: white;
-    box-shadow: 0px 0px 12px -4px #444444;
-    transform: scale(1.1);
-}
-
-.card p {
-    margin-top: 1em;
+.bottom {
+    grid-column-start: 2;
+    grid-row-start: 3;
 }
 
 .links {
@@ -119,21 +61,9 @@ h6 {
 }
 
 .link>a:hover, .link>a:visited:hover {
-    color: white;
     cursor: pointer;
 }
 
 .link>a, .link>a:visited {
-    color: white;
     text-decoration: none;
-}
-
-#push, #footer {
-    width: 100%;
-    text-align: center;
-}
-
-#list-container {
-    position: relative;
-    text-align: left;
 }
