--- a/css/home-main.css
+++ b/css/home-main.css
@@ -4,13 +4,13 @@
     margin: 0px;
     padding: 0px;
     font-family: 'JetBrains Mono', monospace;
-    color: white;
+    color: black;
 }
 
 html {
     width: 100%;
     height: 100%;
-    background: linear-gradient(160deg, rgba(60,0,85,1) 0%, rgba(0,0,159,1) 50%, rgba(0,255,230,1) 120%);
+    background: paleturquoise;
 }
 
 body {
@@ -55,13 +55,14 @@ h6 {
 }
 
 .link:hover {
-    background: #d3d3d352;
-    border-radius: 4px;
+    background: black;
     cursor: pointer;
+    color: white;
 }
 
 .link>a:hover, .link>a:visited:hover {
     cursor: pointer;
+    color: white;
 }
 
 .link>a, .link>a:visited {
